--- a/BookWebsite/bookcss.css
+++ b/BookWebsite/bookcss.css
@@ -1,33 +1,66 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+body {
+    font-family: "Roboto", sans-serif;
+    margin: 20px;
+}
+
 header {
-    border-bottom: 1px solid orange;
-    margin: 5%;
-    text-align: center
-    
-}    
-nav ul {    list-style-type: none;
-    padding: 0;
-    text-align: right;
-}
-
-nav ul li {
-    display: inline;
-    margin: 0 15px;
-}
-main{
-    display: grid 1fr 2fr 1fr;
-    border-top: 1px solid orange;
-    margin: 5%;
     text-align: center;
+    margin-bottom: 20px;
+    border-bottom: 1px solid orange;
 }
 
-body{
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.2em;
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    text-align: Right;
+    border-bottom: 1px solid orange;
+
 }
 
-.left-colum{
+
+main.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr;
+    gap: 20px;
+}
+
+#articles-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    grid-column: 2 / span 1;
+}
+
+#filter-section {
+    padding: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    grid-column: 3;
+
+}
+
+.article {
+    display: grid;
+    grid-template-columns: 150px 1fr;
+    border: 1px solid #ccc;
+    padding: 15px;
+    border-radius: 5px;
+}
+
+.left-column {
+    border-right: 1px solid #ccc;
     padding-right: 15px;
+}
 
+.middle-column {
+    padding-left: 15px;
+}
+
+.article img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-bottom: 10px;
 }
