--- a/finalwebsite/ms.css
+++ b/finalwebsite/ms.css
@@ -1,5 +1,3 @@
-/* final.css */
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -47,7 +45,8 @@ header .filter label {
 main {
     padding: 20px;
 }
-main p{
+
+main p {
     text-align: center;
 }
 
@@ -78,9 +77,12 @@ main .container img {
 }
 
 #meme-details img {
-    max-width: 700px;
+    max-width: 100%;
+    max-height: 500px; 
+    width: auto;
     height: auto;
-    margin: 10px auto; /* Center the image */
+    display: block;
+    margin: 10px auto; 
 }
 
 #meme-details p {
@@ -116,8 +118,6 @@ footer p {
     margin: 0;
 }
 
-
-/* Responsive Design for mobile view */
 @media (max-width: 600px) {
     #meme-details .meme {
         display: block;
@@ -134,8 +134,9 @@ footer p {
 
     #meme-details img {
         max-width: 100%;
+        max-height: 700px;
         height: auto;
-        margin: 10px auto; /* Center the image */
+        margin: 10px auto; 
     }
 
     #meme-details p {
